--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mpanel-memory-graph"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alvin Peters <alvin@striczkof.io>"]
 edition = "2021"
 repository = "https://github.com/striczkof/mpanel-memory-graph-rs"
@@ -10,8 +10,10 @@ license = "MIT"
 
 [dependencies]
 getopts = "0.2.21"
-duration-str = "0.8.1"
+duration-str = "0.9.1"
 nix = {version = "0.28.0", features = ["fs"]}
 mac_address = "1.1.6"
 regex = "1.10.4"
 rand = "0.8.5"
+sysinfo = "0.30.11"
+configparser = "3.0.4"
